--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+   font-family: 'Quicksand', sans-serif;
+}
+
 .logo {
     font-family: 'Pacifico', cursive;
     color:#F3C677;
@@ -112,13 +116,13 @@
 #carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
 #carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);} 
 
-img{
+#carousel img{
     -webkit-filter: grayscale(1);
     width: 215px;
 	cursor: pointer;
 	transition: all .5s ease;
 }
-img:hover{
+#carousel img:hover{
 	-webkit-filter: grayscale(0);
   transform: scale(1.2,1.2);
 }
