gallery built from JSON file, start of timeline display design

--- a/app/timeline/timeline.css
+++ b/app/timeline/timeline.css
@@ -1,6 +1,6 @@
 
 .box{
-  background-image: url(https://s-media-cache-ak0.pinimg.com/736x/80/91/f9/8091f9dceb2ea55fa7b57bb7295e1824.jpg);
+  background-image: url(https://il6.picdn.net/shutterstock/videos/2438609/thumb/1.jpg);
   background-size: cover;
   width: 350px;
   height: 600px;
