--- a/app/timeline/timeline.css
+++ b/app/timeline/timeline.css
@@ -1,158 +1,205 @@
+.event .panel-body {
+  background: #0C0A3E;
+  border: 1px solid #F3C677;
+  padding:0;
+  margin:0;
+  height:86px;
+}
+.event .panel-body > div {
+  padding: 0 10px;
+}
+.event .panel-body .rsvp {
+  border-left: none;
+  padding: 0;
+  text-align: center;
+  position: relative;
+  background: #0C0A3E;
+  color: #F3C677;
+  height: 100%;
+}
 
-.box{
-  background-image: url(https://il6.picdn.net/shutterstock/videos/2438609/thumb/1.jpg);
-  background-size: cover;
-  width: 350px;
-  height: 600px;
+.event .rsvp > div {
+  font-size: 12px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  .but{
-    cursor: pointer;
-  }
-  .mask{
-    width: 100%;
-    height: 100%;
-    background-color: #004d99;
-    opacity: 0.5;
-  }
-  .top{
-    position: absolute;
-    top: 0;
-    color: white;
-    font-size: 1.3em;
-    width: 100%;
-    height: 20%;
-    padding: 15px;
-    .menu{
-      float: left;
+  bottom: 0;
+  background: #42A5F5;
+  width: 100%;
+}
+
+.event .rsvp i {
+  font-size: 2em;
+  display: block;
+  position:relative;
+  top:17%;
+  margin-bottom:5px;
+}
+.event .rsvp i:last-of-type{
+    font-size:1.5em;
+    margin-top:-23px;
+}
+
+.event .rsvp span {
+  cursor: pointer;
+  padding: 0 5px;
+  margin: 5px 0;
+  width:45%;
+}
+.event .rsvp span:first-of-type{
+  border-right: 1px solid white;
+}
+.event .rsvp span:hover{
+  color: #1565C0;
+}
+
+.event .info{
+  font-size: 28px;
+  color: #F3C677;
+}
+
+.event .info > div, .event .info > ul{
+  font-size: 12px;
+}
+
+.profile-image {
+  position: absolute;
+  background: white;
+  padding: 3px;
+  width: 5em;
+  border-radius: 50%;
+  border: 1px solid #CCC;
+  box-sizing: content-box;
+  z-index: 1;
+  top:4px;
+}
+
+.event .author img {
+    width:100%;
+    border-radius:50%;
+}
+
+/* Overwrites */
+.nav-tabs a {
+  background: #90CAF9;
+  color: white;
+}
+.info .nav-tabs li.active a {
+  background-color: #448AFF;
+  color: white;
+}
+.info .nav-tabs li:hover a, .info .nav-tabs li.active:hover a {
+  background: #00BCD4;
+  color: white;
+}
+.tab-content {
+  background: white;
+  border-radius: 0 10px;
+  padding: 10px;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    .event .panel-body {
+        height:158px;
     }
-    .search{
-      float: right;
-    }
-  }
-  .time{
-    position: absolute;
-    top: 10%;
-    color: white;
-    line-height: 30px;
-    font-family: "Lato";
-    width: 50%;
-    padding: 15px;
-    height: 100px;
-    float: left;
-    #date{
-      font-size: 2.5em;
-    }
-    #fulldate{
-      font-size: 0.8em;
-    }
-  }
-  .temp{
-    position: absolute;
-    top: 10%;
-    width: 50%;
-    right: 0;
-    text-align: right;
-    color: white;
-    font-size: 2.5em;
-    height: 100px;
-    padding-top: 5px;
-    padding-right: 15px;
-  }
-  .middle{
-    position: absolute;
-    color: white;
-    top: 28%;
-    width: 100%;
     
-    #hi{
-      font-size: 1.5em;
-      margin-left: 15px;
+    .event .rsvp {
+        min-height:100%;
     }
-    .timeline{
+    
+    .event .rsvp i {
+        font-size:4em;
+        top:5%;
+    }
+    
+    .event .panel-body .author {
+      position: relative;
+      color: #2196F3;
+      padding:10px;
+      height:100%;
+    }
+    .event .profile {
+      position: relative;
+      z-index: 0;
+      border-left: 2px solid white;
+      top: -5px;
+      padding-left: 55px;
+      height: 100%;
+      left: 10%;
+    }
+    .event .profile strong {
+      display: block;
+      color: white;
+      font:20px bold 'Fredoka One', serif;
+      -webkit-text-stroke-width: .6px;
+      -webkit-text-stroke-color: #448AFF;
+      margin-bottom: 5px;
+    }
+    .event .author .profile i {
+      color:  #448AFF;
+      padding-left: 0;
+    }
+    .event .profile .links {
+      position: absolute;
+      bottom: 0;
+    }
+    .event .profile article {
+        padding:0 41px 0 0;
+    }
+    .event .author .profile i:hover{
+      color:  #00BCD4;
+    }
+    .profile-image {
+      position: absolute;
+      background: white;
+      padding: 3px;
+      width: 30%;
+      border-radius: 50%;
+      border: 1px solid #CCC;
+      box-sizing: content-box;
+      z-index: 1;
+      top:13px;
+    }
+    .event .author img {
       width: 100%;
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      ul{
-        list-style: none;
-        width: 100%;
-        display: flex;
-        height: 100%;
-        flex-direction: column;
-        padding: 0;
-        li{
-          margin-top: 30px;
-          display: inline-block;
-          width: 100%;
-          height: 65px;
-          
-          .hour{
-            float: left;
-            font-size: 2em;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 20%;
-            
-            #sub{
-              font-size: 0.5em;
-            }
-          }
-          .work{
-            float: right;
-            width: 80%;
-            height: 100%;
-            font-size: 1.2em;
-            font-family: "Raleway";
-            border-bottom: 1px solid white;
-            #sub{
-              font-size: 0.8em;
-            }
-          }
-        }
-      }
-    }
-  }
-  .bottom{
-    position: absolute;
-    bottom: 5%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    button{
-      border: none;
-      width: 40px;
-      height: 40px;
       border-radius: 50%;
     }
-    #done{
-      color: white;
-      font-size: 1.1em;
-      background-color: $fLime;
-      &:hover{
-        background-color: darken($fLime,10%);
-      }
-    }
-    #edit{
-      color: white;
-      font-size: 1.1em;
-      background-color: $fRed;
-      &:hover{
-        background-color: darken($fRed,10%);
-      }
-    }
-    #plus{
-      color: white;
-      font-size: 1.1em;
-      background-color: $fPurple;
-      &:hover{
-        background-color: darken($fPurple,10%);
-      }
-    }
-  }
 }
+
+.menu{
+   background: #0C0A3E;
+  color:#F3C677;
+  border-radius:50%;
+}
+
+.course-item{
+  position:relative;
+  background: #0C0A3E;
+  height:150px;
+}
+
+.course-image img{
+  position:absolute;
+  top:10%;
+  left: 10%;
+  background:#7B1E7A;
+  border: 3px solid #F3C677;
+  width:80px;
+}
+
+.course-title{
+  position:absolute;
+  bottom:10%;
+  right:10%;
+  color: #F3C677;
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    .event .profile {
+      left: 17%;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
+
