--- a/css/style.css
+++ b/css/style.css
@@ -4,63 +4,25 @@
 
 body{
    font-family: 'Quicksand', sans-serif;
+ /*   background-color: #0C0A3E;*/
 }
 
-.logo {
-    font-family: 'Pacifico', cursive;
-    color:#F3C677;
- }
-
-.jumbotron {
-    background-color: #0C0A3E;
+.my-background {
+    background: linear-gradient(to bottom right, #4F84C4,#F3D6E4);
+    color: #223A5E;
+    height:800px;
+    text-align: center;
 }
 
-#login-dp{
-    min-width: 250px;
-    padding: 14px 14px 0;
-    overflow:hidden;
-    background-color:rgba(255,255,255,.8);
+h1{
+    height: 3em;
 }
-#login-dp .help-block{
-    font-size:12px    
-}
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
- /*   border-top:1px solid #ddd;*/
-    clear:both;
-    padding:14px;
-}
-#login-dp .social-buttons{
-    margin:12px 0    
-}
-#login-dp .social-buttons a{
-    width: 49%;
-}
-.btn-fb{
-    color: #fff;
-    background-color:#3b5998;
-}
-.btn-fb:hover{
-    color: #fff;
-    background-color:#496ebc 
-}
-.btn-tw{
-    color: #fff;
-    background-color:#55acee;
-}
-.btn-tw:hover{
-    color: #fff;
-    background-color:#59b5fa;
-}
-@media(max-width:768px){
-    #login-dp{
-        background-color: inherit;
-        color: #fff;
-    }
-    #login-dp .bottom{
-        background-color: inherit;
-        border-top:0 none;
-    }
+
+
+.login-btn {
+    display:block;
+    margin: auto;
+    width:300px;
 }
 
 .navbar{
@@ -77,7 +39,7 @@ body{
     color: #F3C677;
 }
 
-.my-header h1 {
+h1.logo {
     font-family: 'Pacifico', cursive;
     font-size:5em; 
 }
@@ -89,65 +51,3 @@ body{
 	position: relative;
 	perspective: 1000px;
 }
-#carousel{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	transform-style: preserve-3d;
-	animation: rotation 50s infinite linear;
-}
-#carousel:hover{
-	animation-play-state: paused;
-}
-#carousel figure{
-	display: block;
-	position: absolute;
-	width: 215px;
-	height: 200px;
-	left: 10px;
-	top: 10px;
-	background: black;
-	overflow: hidden;
-	border: solid 5px #F3C677;
-}
-#carousel figure:nth-child(1){transform: rotateY(0deg) translateZ(288px);}
-#carousel figure:nth-child(2) { transform: rotateY(40deg) translateZ(288px);}
-#carousel figure:nth-child(3) { transform: rotateY(80deg) translateZ(288px);}
-#carousel figure:nth-child(4) { transform: rotateY(120deg) translateZ(288px);}
-#carousel figure:nth-child(5) { transform: rotateY(160deg) translateZ(288px);}
-#carousel figure:nth-child(6) { transform: rotateY(200deg) translateZ(288px);}
-#carousel figure:nth-child(7) { transform: rotateY(240deg) translateZ(288px);}
-#carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
-#carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);} 
-
-#carousel img{
-    -webkit-filter: grayscale(1);
-    width: 215px;
-	cursor: pointer;
-	transition: all .5s ease;
-}
-#carousel img:hover{
-	-webkit-filter: grayscale(0);
-  transform: scale(1.2,1.2);
-}
-
-@keyframes rotation{
-	from{
-		transform: rotateY(0deg);
-	}
-	to{
-		transform: rotateY(360deg);
-	}
-}
-/* color palette
-
-HEX: #0C0A3E darkest
-
-HEX: #7B1E7A purpule
-
-HEX: #B33F62 pink
-
-HEX: #F9564F orange
-
-HEX: #F3C677 yellow
-*/
