--- a/app/login/login.css
+++ b/app/login/login.css
@@ -1,6 +1,6 @@
 .my-modal {
-    background-color: #0C0A3E;
-    color:#F3C677;
+    background-color: #4F84C4;
+    color:#F3D6E4;
     font-family: 'Quicksand', sans-serif;
     font-size: 1.5em;
 }
