--- a/app/gallery/gallery.css
+++ b/app/gallery/gallery.css
@@ -174,6 +174,10 @@
   border-radius:80%;
 }
 
+.courses-list{
+  height:100%;
+}
+
 .course-item{
   position:relative;
   background-color: transparent;
