--- a/app/gallery/gallery.css
+++ b/app/gallery/gallery.css
@@ -174,6 +174,12 @@
   font-size: 1.5em;
 }
 
+.btn-group.col-sm-12{
+  display:block;
+  margin:auto;
+  font-size: 1.5em;
+}
+
 .menu{
   color:#0C0A3E;
   border-radius:80%;
@@ -241,6 +247,9 @@ a.list-group-item {
   font-size: 12px;
 }
 
+.event .student-list{
+  font-size: 1.5em;
+}
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
     .event .profile {
